Fixed align buttons

--- a/client/src/components/ProductList/ProductList.css
+++ b/client/src/components/ProductList/ProductList.css
@@ -5,11 +5,6 @@
   gap: 2rem;
 }
 
-.description {
-  text-align: center;
-  height: 12rem;
-}
-
 .img {
   height: 10rem;
   width: auto;
